HTTPS/kubercloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubercloud-deployment
  namespace: kubernetes-demo
  labels:
    app: kubercloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubercloud
  template:
    metadata:
      labels:
        app: kubercloud
    spec:
      containers:
      - name: kubercloudpod
        image: akscontainerreg27.azurecr.io/myspringbootimage:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: pullimagekey
