HTTPS/kubercloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubercloud-service
  namespace: kubernetes-demo
spec:
  selector:
    app: kubercloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
