HTTPS/kubercloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
  name: kubercloud-ingress
  namespace: kubernetes-demo
spec: 
  tls:
  - hosts:
    - mysbapp.snicloud.xyz
    secretName: kubernetes-web-cert
  rules: 
    - host: mysbapp.snicloud.xyz
      http: 
        paths: 
          - backend: 
              service:
                name: kubercloud-service
                port: 
                  number: 80
            path: /
            pathType: Prefix
